
	* Changed parameter name in the user initialization hook
	* Move code to inject tags into <head> into the separate function
	* Refactored TSFE postproc hook to use smaller functions
	* Now adding a special <meta> tag with a usergroup id to the indexed output to create a mnogosearch section for filtering
	* Add a security measure: use URL parameter for groups only if the indexer is running

2009-10-28  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Added explicit cdon/cdoff to the indexer configuration
	* Added a method to obtain configuration lines directly from configuration. This will be used when usergroup indexing is impemented.
	* Removed anonymous and "any" items from user groups; clarified some form titles
	* Temporarily removed user group configuration for the realm
	* Added tag generation for user groups. No group parameter injection yet.
	* Added group parameter injection to server configuration

2009-10-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Activate the new command line tool

2009-10-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a new TSFE hook to force user groups for pages and content
	* Added a user group field to the indexing configuration record
	* Added a hook to exclude tx_mnogosearch_gid from cHash parameters
	* Added new classes for more structured processing in the command line tool

2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Renamed TSFE postproc hook class
	* Moved TCEmain and CMSLayout hook classes

2009-04-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed issue with HTML tags in search results title

2009-04-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3040: uppercase extensions are not recognized
	* Tuned search results so that subject has more weight than body
	* Fixed bug #3067: order of the checkboxes (or selections) for advanced search
	* Fixed bug #2531: some issues about xhtml validation
	* Fixed bug #3036: Problems with hypenated database names

2009-02-23  Dmitry Dulepov  <dmitry@typo3.org>
