@@ -5,6 +5,7 @@
 	* Refactored TSFE postproc hook to use smaller functions
 	* Now adding a special <meta> tag with a usergroup id to the indexed output to create a mnogosearch section for filtering
 	* Add a security measure: use URL parameter for groups only if the indexer is running
+	* Added a hook to set mnogosearch variables to config
 
 2009-10-28  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
